# power-editor

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml
docs/: known-issues-chinese-ime-punctuation.md
scripts/: set-version.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keybindings.rs  lib.rs
src-tauri/src/buffer/: mod.rs
src-tauri/src/csv/: mod.rs
src-tauri/src/file_io/: mod.rs
src-tauri/src/file_watcher/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/shell_integration/: mod.rs
src-tauri/src/wordfile/: mod.rs
src/components/dialogs/: AboutDialog.module.css  AboutDialog.tsx  CloseConfirmDialog.module.css  CloseConfirmDialog.tsx  CsvToFixedWidthDialog.module.css  CsvToFixedWidthDialog.tsx  (+5 more)
src/extensions/: chromiumImeAutocorrectWorkaround.ts  columnMode.ts  searchHighlight.ts  smartEnter.ts  wordfileSyntax.ts
src/hooks/: useFile.ts  useFileWatcher.ts  useKeybindingDispatcher.ts  usePrefsPersist.ts  useSessionRestore.ts  useWindowClose.ts
src/i18n/: index.ts
src/store/: atoms.ts  editorPrefs.ts  editorViewRegistry.ts  favoriteFiles.ts  keybindings.ts  recentFiles.ts  searchHistory.ts  splitAtoms.ts  tauriCommands.ts  virtualLoadAnnotation.ts
src/types/: index.ts  session.ts
src/utils/: pathUtils.ts  specialChars.ts  tabFileName.ts
wordfiles/: cpp.uew  python.uew  rust.uew
(+27 files in other folders)
