[package]
name = "power-editor"
version = "0.1.2"
description = "A high-performance text editor optimized for large files"
authors = []
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Text buffer: Rope data structure for O(log n) edits
ropey = "1.6"

# File I/O: memory-mapped files for instant large file opening
memmap2 = "0.9"

# Encoding detection and conversion
encoding_rs = "0.8"
chardetng = "0.1"

# Regex search engine (SIMD-accelerated)
regex = "1.11"

# Async runtime for non-blocking I/O
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Unicode display width (for fixed-width CSV conversion)
unicode-width = "0.1"

# Cross-platform temp file support for safe saves
tempfile = "3"

# File-system event watching (external modification detection)
notify = "6"

[target.'cfg(windows)'.dependencies]
# Windows registry access for Explorer context menu integration
winreg = "0.52"
